--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	
 	
 	
-	<a href="https://api.whatsapp.com/send?phone=917999509642&text=&source=&data=&app_absent=" target="_blank">
+	<a href="https://www.instagram.com/_.roll.no.24._/?igshid=touug9uduk36" target="_blank">
 	<image  width="50" height="50" src="ig.jpeg" alt="Instagram support"></image>
 <p>
 	
