--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
+	
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-178533072-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-178533072-1');
+</script>
+
+	
+	
+	
+	
+	
 <style>
 
 
