--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 <marquee style="font-size:36"> PranjalM.com is being repaired</marquee> <hr>
   
   
+ 
+ <p class="aligncenter"> 
+<image  width="200" height="200" src="pm.jpeg" alt="Instagram support"></image> </p>
 
 
 
