--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <hr>
 <marquee style="font-size:36"> PranjalM.com is being repaired</marquee> <hr>
   
-  
- 
- 
+  <p class="aligncenter">
+ <image width="50" height="50" src="wa.jpeg" alt="Whatsapp support"></image>
+ </p>
 
 
 <style> table,th,td{border:1px solid black</style> 
