--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <marquee style="font-size:36"> PranjalM.com is being repaired</marquee> <hr>
   
   <p class="aligncenter">
- <image width="50" height="50" src="wa.jpeg" alt="Whatsapp support"></image>
+ <image width="200" height="200" src="pm.jpeg" alt="PranjalM pic"></image>
  </p>
 
 
