--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 </h1>
   <hr>
 <marquee style="font-size:36"> PranjalM.com is being repaired</marquee> <hr>
-  
-  <p class="aligncenter">
+  <div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/country/in"><span style="color:gray;">Current local time in</span><br />India</a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=medium&timezone=Asia%2FKolkata" width="100%" height="115" frameborder="0" seamless></iframe> 
+	</div>
+	  <p class="aligncenter">
  <image width="200" height="200" src="pm.jpeg" alt="PranjalM pic"></image>
  </p>
 
