--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ height:30px;
 <body style="background-color:skyblue;" >
 <hr>
  <h1 style="color:red" >
-🅿PranjalM.com  
+🅿PranjalM  
 		
 <image border="3"  align="right" width="120" height="120" src="pm.jpeg" alt="pranjal's pic"></image> 
 
@@ -128,7 +128,7 @@ Learn HTML-5
   
   
   
-<marquee>PranjalM.com is being repaired (Last updated on 22September2020)</marquee> <hr>
+<marquee>Roll No. 1906024 </marquee> <hr>
 
  <div class="baseDiv" >
   <div  class="myDiv" style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/country/in"><span style="color:gray;">Current local time in</span><br />India</a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=medium&timezone=Asia%2FKolkata" width="100%" height="120" frameborder="0" seamless></iframe> 
