--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@ Learn HTML-5
 
 
 
-<embed src ="Ummon-_Hiyonat_Background_Music__Famous_Tik_Tok_background_music__Tik_tok_shayri_background_music(256k).mp3"
+<!--    <embed src ="Ummon-_Hiyonat_Background_Music__Famous_Tik_Tok_background_music__Tik_tok_shayri_background_music(256k).mp3"
 loop="true" autostart="true" width="2"  height="5">
-
+     -->
 </body>
 </html>
 
