--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="CssFile2.css">
   </header>
   <body>
-  <h1 style="color:red" align="center">🅿PranjalM.com </h1>
+  <h1 style="color:red" align="center">🅿PranjalM</h1>
   <hr>
 <marquee style="font-size:36"> Roll no. 1906024</marquee> <hr>
   
