--- a/newform.html
+++ b/newform.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Registration Form</title>
-    <style>
+    <style media="screen" align="center">
 	
 	
 			
