--- a/profile.html
+++ b/profile.html
@@ -72,8 +72,19 @@
         </tr>
 
         <tr class="rows">
-            <td>NA</td>
-            <td>NA</td>
+            <td>10th</td>
+            <td>9.4 CGPA</td>
+
+        </tr>
+			    
+			      <tr class="rows">
+            <td>12th</td>
+            <td>87%</td>
+
+        </tr>
+			      <tr class="rows">
+            <td>B.Tech.(pursuing)</td>
+            <td>8.16 CGPA</td>
 
         </tr>
 	
