--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@ Learn HTML-5
 <ul><li><a href="q1.html" target="_self">Implementation of Div</a></li><li><a href="newform.html" target="_self">Resistration form</a></li></ul><br>
 <li>Lab 4[18/09/2020]</li><br>
 <ul><li><a href="versioncontrol.html" target="_self">GIT Version Control<a></li><li><a href="profile.html" target="_self">Qualifications<a></li></ul><br>
+<li>Lab 5[25/09/2020]</li><br>
+<ul><li><a href="1as25sep.html" target="_self">Assignment1</a></li></ul><br>
+</ul>	
+	
 </ul>
 </td>
 
