--- a/1as25sep.html
+++ b/1as25sep.html
@@ -16,6 +16,7 @@ img{
   margin : 5px;
   transition : all 1s;
   border:5px solid red;
+	  border-radius:20%;
   box-shadow : 9px 9px 9px pink;
 }
 img:hover{
