--- a/1as25sep.html
+++ b/1as25sep.html
@@ -25,7 +25,7 @@ img:hover{
 h1{
   color:Blue;
   border-bottom : 2px solid yellow;
-  width : 400px;
+  width : 100%;
   text-align: center;
   border-right : 2px solid green;
  
