--- a/1as25sep.html
+++ b/1as25sep.html
@@ -32,7 +32,7 @@ h1{
 }
 </style>
 </head>
-<body style="background-color:orange">
+<body style="background-color:#fff0f0">
 	
 	
 <h1 style="color:red" >
