--- a/1as25sep.html
+++ b/1as25sep.html
@@ -23,16 +23,20 @@ img:hover{
   transform : scaleY(1.5);
 }
 h1{
+text-align: center;
   color:Blue;
-  border-bottom : 2px solid yellow;
-  width : 100%;
-  text-align: center;
-  border-right : 2px solid green;
+  box-shadow: 10px 10px 10px blue;
+ 
+  width : 1000px;
+  margin-left:auto;
+  margin-right:auto;
+ 
+ 
  
 }
 </style>
 </head>
-<body style="background-color:#fff0f0">
+<body style="background: #fff0f0">
 	
 	
 <h1 style="color:red" >
