--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ height:30px;
  <h1 style="color:red" >
 🅿PranjalM  
 		
-<image border="3"  align="right" width="120" height="120" src="pm.jpeg" alt="pranjal's pic"></image> 
+<image border="3"  align="right" width="120" height="120" src="dog.jpeg" alt="dog's pic"></image> 
 
 </h1><br><br>
  
