--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ Learn HTML-5
 <div class="bottomDiv" >
 
 
-	<a href="https://instagram.com/_.roll.no.24._?igshid=touug9uduk36" target="_blank">
+	<a href="https://instagram.com/_.roll.no.24._?igshid=touug9uduk36_0000" target="_blank">
 	<image  width="50" height="50" src="ig.jpeg" alt="Instagram support"></image>
 <br>Instagram
 
@@ -250,12 +250,10 @@ Learn HTML-5
 
 
 
-<!--    <embed src ="Ummon-_Hiyonat_Background_Music__Famous_Tik_Tok_background_music__Tik_tok_shayri_background_music(256k).mp3"
-loop="true" autostart="true" width="2"  height="5">
-     -->
+
+     
 </body>
 </html>
 
-<!--
-<marquee style="font-size:36">🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵</marquee> <hr>
--->
+
+
