--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ height:30px;
   .bottomDiv{
   float: left;
   margin:auto;
-   width:20%;
+   width:25%;
    text-align: center;
   
   }
@@ -227,16 +227,16 @@ Learn HTML-5
 </div>
 
 
-
+<!--
 <div class="bottomDiv" >
 
 
-	<a href="https://instagram.com/_.roll.no.24._?igshid=touug9uduk36_0000" target="_blank">
+	<a href="https://instagram.com/_.roll.no.24._?igshid=touug9uduk36" target="_blank">
 	<image  width="50" height="50" src="ig.jpeg" alt="Instagram support"></image>
 <br>Instagram
 
 </div>
-
+-->
 <div class="bottomDiv" >
 
 
