--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@ Learn HTML-5
 <li>Lab 4[18/09/2020]</li><br>
 <ul><li><a href="versioncontrol.html" target="_self">GIT Version Control<a></li><li><a href="profile.html" target="_self">Qualifications<a></li></ul><br>
 <li>Lab 5[25/09/2020]</li><br>
-<ul><li><a href="1as25sep.html" target="_self">Assignment1</a></li></ul><br>
+<ul><li><a href="1as25sep.html" target="_self">Assignment1-flex</a></li></ul><br>
+	<ul><li><a href="bootstrap.html" target="_self">Assignment2-bootstrap</a></li></ul><br>
 </ul>	
 	
 </ul>
