--- a/bootstrap.html
+++ b/bootstrap.html
@@ -141,7 +141,7 @@
 <br>
 <br>
 	
-<a href="#" target="_blank">
+<a href="#" target="_self">
 <h2  id="pm3" align="center" title='Link to the creator of this page'  style= "color:#ff0000;">	&copyPranjal Mishra | Roll no. 1906024 | NIT Patna  </h2></a>
 
 </body>
