--- a/index.html
+++ b/index.html
@@ -199,10 +199,11 @@ Learn HTML-5
 
 	<image width="50" height="50" src="em.jpg" alt="Mail"></image>
 	<br><br><u>For any Suggestion:</u>
-	<br>Pranjalmishra23feb+suggestion@gmail.com
+	<br><a href="mailto:Pranjalmishra23feb+suggestion@gmail.com">
+	Pranjalmishra23feb+suggestion@gmail.com</a>
 	<br><u>For any Query:</u>
-	<br>Pranjalmishra23feb+query@gmail.com
-
+	<br><a href="mailto:Pranjalmishra23feb+query@gmail.com">
+	Pranjalmishra23feb+query@gmail.com</a>
 
 </div>
 
