--- a/lab6_1.html
+++ b/lab6_1.html
@@ -1,5 +1,7 @@
+
 <!DOCTYPE html> 
 <head> 
+  
 	<title>Responsive Background Image & Upper case and lowercase</title>
 
   
@@ -7,6 +9,10 @@
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
+
+	
+	
+<style>
 
 body { 
 
