--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ Learn HTML-5
 	<ul><li><a href="bootstrap.html" target="_self">Assignment2-bootstrap</a></li></ul><br>
 </ul>	
 	
+<li>Lab 6[09/10/2020]</li><br>
+<ul><li><a href="lab6_1.html" target="_self">Lab6_1</a></li></ul><br>
+
+	
 </ul>
 </td>
 
