--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Learn HTML-5
 
 
 	<image width="50" height="50" src="em.jpg" alt="Mail"></image>
-	<br><br><u>For any Suggestion:</u>
+	<br><u>For any Suggestion:</u>
 	<br><a href="mailto:Pranjalmishra23feb+suggestion@gmail.com">
 	Pranjalmishra23feb+suggestion@gmail.com</a>
 	<br><u>For any Query:</u>
