--- a/newform.html
+++ b/newform.html
@@ -86,7 +86,7 @@ h3{
 <hr>
 
 
-    <legend><h2 style="text-align:center ">Resistration form</h2></legend><br>
+    <legend><h2 style="text-align:center ">Registration form</h2></legend><br>
     <div class="myDiv">
         <h3 align="center">BASIC DETAILS   </h3>
         
