--- a/q1.html
+++ b/q1.html
@@ -87,7 +87,7 @@ h2{
  
 </div><br>
 <div class="myDiv2">
-<h2 style="text-align:center">Devloper Contact</h2>
+<h2 style="text-align:center">Developer Contact</h2>
 
 <table style="width:100%">
 <tr style="background-color:#6dbf80;"><td><h2 style="text-align:center">Profile Pic</h2></td><td><h2 style="text-align:center">Contact Links</h2></td>
