--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Learn HTML-5
 
 <div class="bottomDiv" >
 
-	<a href="https://github.com/pranjalmishra23" target="_blank">
+	<a href="https://github.com/codepranjal" target="_blank">
 	<image  width="50" height="50" src="gh.jpg" alt="Github"></image>
 <br>Github
 
