--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@ Learn HTML-5
 	
 <li>Lab 6[09/10/2020]</li><br>
 <ul><li><a href="lab6_1.html" target="_self">Lab6_1</a></li></ul><br>
-
+	
+	<li>Lab 7[16/10/2020]</li><br>
+<ul><li><a href="buttontransition.html" target="_self">Lab6_1</a></li></ul><br>
+<ul><li><a href="doubleanimation.html" target="_self">Lab6_1</a></li></ul><br>
 </ul>	
 </ul>
 </td>
